# Numpy-Exercise---Calculator-

./: README.md  mean_var_std.py  pyproject.toml
