[tool.poetry]
name = "fcc-mean-var-std"
version = "0.1.0"
description = "Tarefa de desenvolvimento de função"
authors = ["Júlio Cezar dos Santos Lima <juliocslima516@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
